@@ -96,7 +96,7 @@ public class URLReader extends Reader {
 	    byte[] buf = new byte[Util.BUF_SIZE];
 	    
 	    natOut = new java.io.BufferedOutputStream(socket.getOutputStream());
-	    natOut.write(Util.toBytes("GET "+url.getFile()+" HTTP/1.1\r\n"));
+	    natOut.write(Util.toBytes("GET "+url.getFile()+" HTTP/1.0\r\n"));
 	    natOut.write(Util.toBytes("Host: " + url.getHost()+":"+url.getPort()+ "\r\n"));
 	    natOut.write(Util.toBytes("X_JAVABRIDGE_CONTEXT: " +env.get("X_JAVABRIDGE_CONTEXT")+"\r\n"));
 	    if(include!=null) 
